--- a/templates/base.html
+++ b/templates/base.html
@@ -32,26 +32,22 @@
     <meta property="og:description" content="{{ SITESUBTITLE }}"/>
     <meta property="og:site_name" content="{{ SITENAME }}" />
     <meta property="og:url" content="{{ SITEURL }}/{{ page.url }}"/>
-    <meta property="og:image" content="{{ AUTHOR_AVATAR }}"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ SITESUBTITLE }}">
     <meta name="twitter:url" content="{{ SITEURL }}/{{ page.url }}">
-    <meta name="twitter:image" content="{{ AUTHOR_AVATAR }}">
     {% else %}
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ SITENAME }}"/>
     <meta property="og:description" content="{{ SITESUBTITLE }}"/>
     <meta property="og:site_name" content="{{ SITENAME }}" />
     <meta property="og:url" content="{{ SITEURL }}"/>
-    <meta property="og:image" content="{{ AUTHOR_AVATAR }}"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{ SITENAME }}">
     <meta name="twitter:description" content="{{ SITESUBTITLE }}">
     <meta name="twitter:url" content="{{ SITEURL }}">
-    <meta name="twitter:image" content="{{ AUTHOR_AVATAR }}">
     {% endif %}
 
     <!-- Feed -->
@@ -107,11 +103,7 @@
   <body>
     <div class="w3-row w3-card w3-white">
       <header id="header">
-        {% if " " in AUTHOR %}
-        <a href="{{ SITEURL }}" id="header-logo" title="Home">{{ AUTHOR[0] + AUTHOR[AUTHOR.index(" ")+1] }}</a>
-        {% else %}
-        <a href="{{ SITEURL }}" id="header-logo" title="Home">{{ AUTHOR[0] }}</a>
-        {% endif %}
+        <a href="{{ SITEURL }}" title="Home"><img style="width: 50px; height: 50px;" src="{{ AUTHOR_AVATAR }}" onerror="this.src='../theme/images/avatar.png'"></a>
         <nav id="header-menu">
           <ul>
             {% if DISPLAY_PAGES_ON_MENU %}
